tests/ui/traits/const-traits/ice-112822-expected-type-for-param.stderr
error[E0277]: the trait bound `{closure@$SRC_DIR/core/src/macros/mod.rs:LL:COL}: [const] FnOnce()` is not satisfied
  --> $DIR/ice-112822-expected-type-for-param.rs:9:17
   |
LL |                 assert_eq!(first, &b'f');
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^ required by a bound introduced by this call
   |
note: required by a bound in `core::panicking::outline`
  --> $SRC_DIR/core/src/panicking.rs:LL:COL

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
